--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 issue_template:
   - name: Feature-Anfrage
     about: Erstelle eine Anfrage für ein neues Feature
-    file: ISSUE_TEMPLATE_FEATURE.md
+    file: ISSUE_TEMPLATE.md
 contact_links:
   - name: GitHub Community Support
     url: https://github.com/orgs/community/discussions
